--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -21,17 +21,17 @@ n_classes: 10
 inference: False  # False for training, True for inference.
 
 # training parameters
-epochs: 100
+n_epochs: 100
 n_batch_train: 128
 n_batch_test: 200
 
 optimizer: sgd
-learning_rate: 0.1
+lr: 0.1
 momentum: 0.9
-decay: 0.0005
+weight_decay: 0.0005
 schedule: [50, 75]  # Decrease learning rate at these epochs.
 gamma: 0.1  # LR is multiplied by gamma on schedule.
 
 seed: 1234
 n_gpu: 1
-device: cuda
+device: cpu
